--- a/stories.html
+++ b/stories.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Mini Minds</title>
+    <title>Stories | Mini Minds</title>
     <link rel="icon" type="image" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap" rel="stylesheet">
@@ -49,21 +49,36 @@
       </nav>
   </header>
   <!--Navigation Bar Code ends-->
+  <!--Back to top button-->
+  <a href="javascript:void(0)" id="backToTop" class="back-to-top" style="display:none;">
+    <svg class="icon__arrow-up" viewBox="0 0 24 24">
+      <title>Back to top</title>
+      <path d="M18.71,11.71a1,1,0,0,1-1.42,0L13,7.41V19a1,1,0,0,1-2,0V7.41l-4.29,4.3a1,1,0,0,1-1.42-1.42l6-6a1,1,0,0,1,1.42,0l6,6A1,1,0,0,1,18.71,11.71Z"/>
+    </svg>
+  </a>
+    <!--Back to top button-->
     <!--Introduction about the stories-->
-    <div class="games" id="games">
-      <div>
+    <div class="our-stories">
       <h2 class="heading">Stories</h2>
       </div>
-      <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
+    <div class="story-list" id="story">
       <div class="space fade-in-left-target">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta non maxime dignissimos earum ea eligendi atque ex possimus dolorem quasi sunt repellat, unde delectus dolore, minus ad ullam enim qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea atque tenetur, debitis inventore cumque sunt delectus. Voluptas odit tenetur ullam sed voluptatum veniam laboriosam? Nisi dolore voluptatem temporibus facilis similique.</p><br><br>
-        <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
+        <ul>
+          <li>
+            <strong>Interactive Stories: A Launchpad for Young Minds</strong>
+            <p>Our interactive stories are meticulously crafted to captivate young minds while fostering essential skills. By immersing children in engaging narratives, we enhance their reading comprehension, sparking a vibrant imagination. Scientific research underscores the power of science fiction in sharpening analytical thinking and fueling creative problem-solving. Every tale we weave is a harmonious blend of entertainment and education, ensuring a delightful and enriching learning experience.</p>
+          </li>
+          <li>
+            <strong>Learning Beyond the Book:</strong>
+            <p>learning should be an exciting adventure, not a chore. Our content goes beyond mere information, encouraging children to connect classroom knowledge with real-world scenarios. By making learning practical and relatable, we empower them to become curious explorers of the world around them. We are passionate about creating a nurturing environment where children can thrive. Our platform is being designed to be a haven for learning, laughter, and growth. </p>
+          </li>
+        </ul>
       </div>
     </div>
     <!--Games section Ends-->
     <!--Stories list section Starts-->
-    <div id="course-list" class="course-list">
-      <h2 class="heading">Our Courses</h2><br>
+    <div id="course-list" class="courses story-list">
+      <h2 class="heading">Stories</h2><br>
       <div class="div-course">
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/solar.png" alt=""></div>
       <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
