--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             </ul><br>
             <button class="sign-in" onclick="signIn()">Sign in</button>
             <p>no account? <a href="#" onclick="signUp()">Sign up</a></p>
+            <a href="#" id="scroll" style="display: none;"><span></span></a>
         </div>
         <!--Cloud resource-->
         <div class="floating-clouds">
@@ -106,7 +107,7 @@
         <img class="fade-in-right-target" src="images/our courses.png" alt="cartoon">
         <div class="space fade-in-left-target">
           <p>Interactive Stories: Our engaging stories help improve reading skills and ignite a imagination skills. According to Science, reading Sci-fi stories can improve your Analytical and Imagination skills. Each story is crafted to be entertaining and educational. Practical Learning: We believe in making education practical. Our content helps kids connect what they learn with real-world experiences, making learning meaningful. At Mini Minds, we are dedicated to creating a space where kids can learn, play, and grow</p><br><br>
-          <a class="button-courses" href="courses.html" target="_blank">Explore courses</a>
+          <a class="button-courses" href="stories.html" target="_blank">Explore Stories</a>
         </div>
     </div>
     <!--Courses section Ends-->
