new-page-modified

--- a/courses.html
+++ b/courses.html
@@ -50,12 +50,34 @@
   </header>
   <!--Navigation Bar Code ends-->
     <!--Courses section Starts-->
-    <div id="courses" class="courses space">
-        <h2 class="heading">What do we do?</h2>
-        <img class="fade-in-right-target" src="images/our courses.png" alt="cartoon">
+    <div class="our-courses">
+      <h2 class="heading">Our Courses</h2>
+    </div>
+    <div id="courses" class="courses space story-list">
         <div class="space fade-in-left-target">
-          <p>Interactive Stories: Our engaging stories help improve reading skills and ignite a imagination skills. According to Science, reading Sci-fi stories can improve your Analytical and Imagination skills. Each story is crafted to be entertaining and educational. Practical Learning: We believe in making education practical. Our content helps kids connect what they learn with real-world experiences, making learning meaningful. At Mini Minds, we are dedicated to creating a space where kids can learn, play, and grow</p><br><br>
-          <a class="button-courses" href="courses.html" target="_blank">Explore courses</a>
+          <p>Unleash your child's potential with our fun and educational games! Designed to make learning an adventure, our platform offers a captivating blend of numbers, letters, and science. Watch as your child's curiosity is ignited and their confidence grows with every challenge conquered. Our games are more than just entertainment; they're a pathway to a brighter future.</p><br>
+          <ul>
+            <li>
+              <strong>Math Magician:</strong>
+              <p>Master addition, subtraction, multiplication, and division through fun puzzles and challenges.</p>
+            </li>
+            <li>
+              <strong>Alphabet Adventure:</strong>
+              <p>Embark on a journey to discover the magic of letters, words, and reading.</p>
+            </li>
+            <li>
+              <strong>Coding Corner:</strong>
+              <p>Learn the basics of coding while creating fun animations and games.</p>
+            </li>
+            <li>
+              <strong>Science Safari: </strong>
+              <p>Explore the wonders of the world with interactive experiments and quizzes.</p>
+            </li>
+            <li>
+              <strong>Logic Labyrinth:</strong>
+              <p>Sharpen problem-solving skills with engaging puzzles and brain teasers.</p>
+            </li>
+          </ul>
         </div>
     </div>
     <!--Courses section Ends-->
