--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img class="fade-in-right-target" src="images/about.png" alt="cartoon">
         <div class="space fade-in-left-target">
           <p>Welcome to Mini Minds! Our mission is to help children enrich their school basics while having tons of fun. At Mini Minds, we believe learning should be practical and enjoyable, which is why we've created a special place just for kids aged 5 to 12. Our site is packed with cool games, exciting activities, and interesting stories designed to make learning fun. Our logo represents our commitment to making education both practical and entertaining.</p><br><br>
-          <a class="button-about" href="about.html" target="_blank">Know More</a>
+          <a class="button-about" href="about.html" target="_blank" >Know More</a>
       </div>
     </div>
     <!--About section Ends-->
@@ -106,8 +106,13 @@
         <h2 class="heading">What do we do?</h2>
         <img class="fade-in-right-target" src="images/our courses.png" alt="cartoon">
         <div class="space fade-in-left-target">
-          <p>Interactive Stories: Our engaging stories help improve reading skills and ignite a imagination skills. According to Science, reading Sci-fi stories can improve your Analytical and Imagination skills. Each story is crafted to be entertaining and educational. Practical Learning: We believe in making education practical. Our content helps kids connect what they learn with real-world experiences, making learning meaningful. At Mini Minds, we are dedicated to creating a space where kids can learn, play, and grow</p><br><br>
-          <a class="button-courses" href="stories.html" target="_blank">Explore Stories</a>
+          <p>Interactive Stories: We provide engaging stories help improve reading skills and ignite a imagination skills. According to Science, reading Sci-fi stories can improve your Analytical and Imagination skills. Each story is crafted to be entertaining and educational. Practical Learning: We believe in making education practical. Our content helps kids connect what they learn with real-world experiences, making learning meaningful. At Mini Minds, we are dedicated to creating a space where kids can learn, play, and grow</p><br><br>
+          <a class="button-courses" onclick="window.dialog.showModal();">Explore Stories</a>
+          <dialog data-modal id="dialog">
+            <p>Stories are yet to be added, do you still wanna continue reading more about our Idea?</p>
+            <a class="button-about" href="stories.html" style="padding: 5px 15px;">Yes</a>
+            <button class="button-about" onclick="window.dialog.close();">No</button>
+          </dialog>
         </div>
     </div>
     <!--Courses section Ends-->
@@ -116,14 +121,14 @@
       <h2 class="heading">Our Edu-Games</h2>
       <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
       <div class="space fade-in-left-target">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta non maxime dignissimos earum ea eligendi atque ex possimus dolorem quasi sunt repellat, unde delectus dolore, minus ad ullam enim qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea atque tenetur, debitis inventore cumque sunt delectus. Voluptas odit tenetur ullam sed voluptatum veniam laboriosam? Nisi dolore voluptatem temporibus facilis similique.</p><br><br>
+        <p>Our edu-games have levels which unlock on every level up ( course completion ) and games are fun and educational at the same time. Get ready for an awesome learning adventure! turn numbers into number magic, letters into language fun, and science into super cool discoveries. You'll explore, you'll laugh, and before you know it, you'll be a learning superstar! Dive into a world of fun where learning is an adventure. <strong>Note:</strong> Games are yet to be developed, if you still wanna explore our ideas about the game check them out by clicking on the button below!</p><br><br>
         <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
       </div>
     </div>
     <!--Games section Ends-->
     <!--Course list section Starts-->
     <div id="course-list" class="course-list">
-      <h2 class="heading">Our Courses</h2><br>
+      <h2 class="heading">Recommended Courses</h2><br>
       <div class="div-course">
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/solar.png" alt=""></div>
       <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
