--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
           <div id="menu-icon" class="menu-icon">&#9776;</div>
           <ul id="menu-items">
               <li>
-                <a href="#about">About</a>
+                <a href="about.html">About</a>
               </li>
               <li>
                 <a href="stories.html">Stories</a>
