--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <h2 class="heading">Our Edu-Games</h2>
       <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
       <div class="space fade-in-left-target">
-        <p>Our edu-games have levels which unlock on every level up ( course completion ) and games are fun and educational at the same time. Get ready for an awesome learning adventure! turn numbers into number magic, letters into language fun, and science into super cool discoveries. You'll explore, you'll laugh, and before you know it, you'll be a learning superstar! Dive into a world of fun where learning is an adventure. <strong>Note:</strong> Games are yet to be developed, if you still wanna explore our ideas about the game check them out by clicking on the button below!</p><br><br>
+        <p>Our edu-games have levels, a new game unlocks on every level up ( course completion ) and games are fun and educational at the same time. Get ready for an awesome learning adventure! turn numbers into number magic, letters into language fun, and science into super cool discoveries. You'll explore, you'll laugh, and before you know it, you'll be a learning superstar! Dive into a world of fun where learning is an adventure. <strong>Note:</strong> Games are yet to be developed, if you still wanna explore our ideas about the game check them out by clicking on the button below!</p><br><br>
         <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
       </div>
     </div>
