--- a/courses.html
+++ b/courses.html
@@ -31,19 +31,16 @@
           <div id="menu-icon" class="menu-icon">&#9776;</div>
           <ul id="menu-items">
               <li>
-                <a href="#about">About</a>
+                <a href="about.html">About</a>
               </li>
               <li>
-                <a href="#courses">Stories</a>
+                <a href="stories.html">Stories</a>
               </li>
               <li>
-                <a href="#games">Games</a>
+                <a href="courses.html">Games</a>
               </li>
               <li>
-                <a href="#course-list">Courses</a>
-              </li>
-              <li>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
               </li>
           </ul>
       </nav>
