--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!--Loader animation-->
   <div id="pulse-wrapper">
     <div id="pulse">
-        <img src="images/logo.png" alt="logo">
+        <img src="images/logo-1.png" alt="logo">
         <span></span>
         <span></span>
     </div>
