--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <!--Loader animation-->
   <div id="pulse-wrapper">
     <div id="pulse">
-        <img src="images/logo-1.png" alt="logo">
         <span></span>
         <span></span>
     </div>
@@ -85,7 +84,8 @@
             <div class="cloud cloud-2 "><img src="images/cloudy.png" alt="Cloud"></div>
         </div>
         <!--Cloud resource end-->
-    </div>
+        <div class="back-to-top"><i class="fa-solid fa-caret-up"></i></div>
+      </div>
     <!--Home Page Ends-->
     <!--Tree resource-->
     <img class="tree-1" src="images/tree.png" alt="Tree" width="200px">
