--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <!--End of loader-->
-  <header>
+  <header class="navbar">
     <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
     <nav>
         <div id="menu-icon" class="menu-icon">&#9776;</div>
@@ -84,7 +84,7 @@
             <div class="cloud cloud-2 "><img src="images/cloudy.png" alt="Cloud"></div>
         </div>
         <!--Cloud resource end-->
-        <div class="back-to-top"><i class="fa-solid fa-caret-up"></i></div>
+        <div class="back-to-top"><a href="#"><i class="fa-solid fa-caret-up"></a></i></div>
       </div>
     <!--Home Page Ends-->
     <!--Tree resource-->
