--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
       <h2 class="heading">Recommended Courses</h2><br>
       <div class="div-course">
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/solar.png" alt=""></div>
-      <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
+      <div class="box fade-in-up-target"><img src="images/Coding.png" alt=""></div>
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Maths.png" alt=""></div>
-      <div class="box fade-in-right-target"><img src="images/Laptop.png" alt=""></div>
+      <div class="box fade-in-up-target"><img src="images/Laptop.png" alt=""></div>
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Pencil.png" alt=""></div>
     </div>
     </div>
