--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </head>
 <body class="night">
   <!--Cursor dot container-->
@@ -85,5 +87,5 @@
   </div>
 </footer>
 <!--Contact Us section Ends-->
-<script src="script.js"></script>
+<script src="about-script.js"></script>
 </body>
