--- a/courses.html
+++ b/courses.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </head>
 <body class="night">
   <!--Cursor dot container-->
@@ -51,26 +53,26 @@
       <h2 class="heading">Our Courses</h2>
     </div>
     <div id="courses" class="courses space story-list">
-        <div class="space fade-in-left-target">
+        <div class="space">
           <p>Unleash your child's potential with our fun and educational games! Designed to make learning an adventure, our platform offers a captivating blend of numbers, letters, and science. Watch as your child's curiosity is ignited and their confidence grows with every challenge conquered. Our games are more than just entertainment; they're a pathway to a brighter future.</p><br>
           <ul>
-            <li>
+            <li class="fade-in-up-target">
               <strong>Math Magician:</strong>
               <p>Master addition, subtraction, multiplication, and division through fun puzzles and challenges.</p>
             </li>
-            <li>
+            <li class="fade-in-up-target">
               <strong>Alphabet Adventure:</strong>
               <p>Embark on a journey to discover the magic of letters, words, and reading.</p>
             </li>
-            <li>
+            <li class="fade-in-up-target">
               <strong>Coding Corner:</strong>
               <p>Learn the basics of coding while creating fun animations and games.</p>
             </li>
-            <li>
+            <li class="fade-in-up-target">
               <strong>Science Safari: </strong>
               <p>Explore the wonders of the world with interactive experiments and quizzes.</p>
             </li>
-            <li>
+            <li class="fade-in-up-target">
               <strong>Logic Labyrinth:</strong>
               <p>Sharpen problem-solving skills with engaging puzzles and brain teasers.</p>
             </li>
