--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img class="fade-in-right-target" src="images/about.png" alt="cartoon">
         <div class="space fade-in-left-target">
           <p>Welcome to Mini Minds! Our mission is to help children enrich their school basics while having tons of fun. At Mini Minds, we believe learning should be practical and enjoyable, which is why we've created a special place just for kids aged 5 to 12. Our site is packed with cool games, exciting activities, and interesting stories designed to make learning fun. Our logo represents our commitment to making education both practical and entertaining.</p><br><br>
-          <a class="button-about" href="about.html" target="_blank" >Know More</a>
+          <a class="button-about" href="about.html" >Know More</a>
       </div>
     </div>
     <!--About section Ends-->
@@ -122,7 +122,7 @@
       <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
       <div class="space fade-in-left-target">
         <p>Our edu-games have levels, a new game unlocks on every level up ( course completion ) and games are fun and educational at the same time. Get ready for an awesome learning adventure! turn numbers into number magic, letters into language fun, and science into super cool discoveries. You'll explore, you'll laugh, and before you know it, you'll be a learning superstar! Dive into a world of fun where learning is an adventure. <strong>Note:</strong> Games are yet to be developed, if you still wanna explore our ideas about the game check them out by clicking on the button below!</p><br><br>
-        <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
+        <a class="button-games" href="courses.html">Coming soon!!</a>
       </div>
     </div>
     <!--Games section Ends-->
