--- a/stories.html
+++ b/stories.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </head>
 <body class="night">
   <!--Cursor dot container-->
@@ -51,13 +53,13 @@
       <h2 class="heading">Stories</h2>
       </div>
     <div class="story-list" id="story">
-      <div class="space fade-in-left-target">
+      <div class="space">
         <ul>
-          <li>
+          <li class="fade-in-left-target">
             <strong>Interactive Stories: A Launchpad for Young Minds</strong>
             <p>Our interactive stories are meticulously crafted to captivate young minds while fostering essential skills. By immersing children in engaging narratives, we enhance their reading comprehension, sparking a vibrant imagination. Scientific research underscores the power of science fiction in sharpening analytical thinking and fueling creative problem-solving. Every tale we weave is a harmonious blend of entertainment and education, ensuring a delightful and enriching learning experience.</p>
           </li>
-          <li>
+          <li class="fade-in-right-target">
             <strong>Learning Beyond the Book:</strong>
             <p>learning should be an exciting adventure, not a chore. Our content goes beyond mere information, encouraging children to connect classroom knowledge with real-world scenarios. By making learning practical and relatable, we empower them to become curious explorers of the world around them. We are passionate about creating a nurturing environment where children can thrive. Our platform is being designed to be a haven for learning, laughter, and growth. </p>
           </li>
