--- a/stories.html
+++ b/stories.html
@@ -30,8 +30,8 @@
     <header>
       <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
       <nav>
-          <div id="menu-icon" class="menu-icon">&#9776;</div>
-          <ul id="menu-items">
+          <div id="menu-icon" class="menu-icon-1">&#9776;</div>
+          <ul id="menu-items" class="menu-items-1">
               <li>
                 <a href="about.html">About</a>
               </li>
@@ -55,7 +55,7 @@
     <div class="story-list" id="story">
       <div class="space">
         <ul>
-          <li class="fade-in-left-target">
+          <li class="fade-in-right-target">
             <strong>Interactive Stories: A Launchpad for Young Minds</strong>
             <p>Our interactive stories are meticulously crafted to captivate young minds while fostering essential skills. By immersing children in engaging narratives, we enhance their reading comprehension, sparking a vibrant imagination. Scientific research underscores the power of science fiction in sharpening analytical thinking and fueling creative problem-solving. Every tale we weave is a harmonious blend of entertainment and education, ensuring a delightful and enriching learning experience.</p>
           </li>
