--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
     <header>
       <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
       <nav>
-          <div id="menu-icon" class="menu-icon">&#9776;</div>
-          <ul id="menu-items">
+          <div id="menu-icon-1" class="menu-icon-1">&#9776;</div>
+          <ul id="menu-items-1" class="menu-items-1">
               <li>
                 <a href="about.html">About</a>
               </li>
