--- a/contact.html
+++ b/contact.html
@@ -87,5 +87,5 @@
   </div>
 </footer>
 <!--Contact Us section Ends-->
-<script src="about-script.js"></script>
+<script src="script.js"></script>
 </body>
