--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,10 @@
   <!--Navigation Bar Code ends-->
  <!--Contact Us section starts-->
  <footer>
-  <div class="footer-container">
+  <div class="footer-container-page">
       <div class="footer-brand contact">
-          <a>Mini <span>Minds</span></a>
+          <a>@Mini <span>Minds</span></a><br>
+          <img src="images/miniminds.png" alt="" height="180px">
       </div>
       <div class="footer-section" id="contact">
           <h2 class="heading">Contacts</h2>
