--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
           <div id="menu-icon-1" class="menu-icon-1">&#9776;</div>
           <ul id="menu-items-1" class="menu-items-1">
               <li>
-                <a href="about.html">About</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="stories.html">Stories</a>
