--- a/stories.html
+++ b/stories.html
@@ -32,6 +32,9 @@
       <nav>
           <div id="menu-icon" class="menu-icon-1">&#9776;</div>
           <ul id="menu-items" class="menu-items-1">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
               <li>
                 <a href="about.html">About</a>
               </li>
