--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="cloud cloud-2 "><img src="images/cloudy.png" alt="Cloud"></div>
         </div>
         <!--Cloud resource end-->
-        <div class="back-to-top"><a href="#"><i class="fa-solid fa-caret-up"></a></i></div>
+        <div class="back-to-top"><a href="#"><i class="fa-solid fa-circle-arrow-up"></i></a></div>
       </div>
     <!--Home Page Ends-->
     <!--Tree resource-->
