--- a/courses.html
+++ b/courses.html
@@ -14,10 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </head>
 <body class="night">
-  <!--Cursor dot container-->
-  <div class="cursor-dot" data-cursor-dot></div>
-  <div class="cursor-outline" data-cursor-outline></div>
-  <!--Cursor dot container-->
   <!--Loader animation-->
   <div id="pulse-wrapper">
     <div id="pulse">
@@ -58,7 +54,7 @@
     <div id="courses" class="courses space story-list">
         <div class="space">
           <p>Unleash your child's potential with our fun and educational games! Designed to make learning an adventure, our platform offers a captivating blend of numbers, letters, and science. Watch as your child's curiosity is ignited and their confidence grows with every challenge conquered. Our games are more than just entertainment; they're a pathway to a brighter future.</p><br>
-          <ul>
+          <ul><div class="back-to-top"><a href="#"><i class="fa-solid fa-circle-arrow-up"></i></a></div>
             <li class="fade-in-up-target">
               <strong>Math Magician:</strong>
               <p>Master addition, subtraction, multiplication, and division through fun puzzles and challenges.</p>
