--- a/stories.html
+++ b/stories.html
@@ -14,10 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </head>
 <body class="night">
-  <!--Cursor dot container-->
-  <div class="cursor-dot" data-cursor-dot></div>
-  <div class="cursor-outline" data-cursor-outline></div>
-  <!--Cursor dot container-->
   <!--Loader animation-->
   <div id="pulse-wrapper">
     <div id="pulse">
@@ -62,6 +58,7 @@
             <strong>Interactive Stories: A Launchpad for Young Minds</strong>
             <p>Our interactive stories are meticulously crafted to captivate young minds while fostering essential skills. By immersing children in engaging narratives, we enhance their reading comprehension, sparking a vibrant imagination. Scientific research underscores the power of science fiction in sharpening analytical thinking and fueling creative problem-solving. Every tale we weave is a harmonious blend of entertainment and education, ensuring a delightful and enriching learning experience.</p>
           </li>
+          <div class="back-to-top"><a href="#"><i class="fa-solid fa-circle-arrow-up"></i></a></div>
           <li class="fade-in-right-target">
             <strong>Learning Beyond the Book:</strong>
             <p>learning should be an exciting adventure, not a chore. Our content goes beyond mere information, encouraging children to connect classroom knowledge with real-world scenarios. By making learning practical and relatable, we empower them to become curious explorers of the world around them. We are passionate about creating a nurturing environment where children can thrive. Our platform is being designed to be a haven for learning, laughter, and growth. </p>
