--- a/about.html
+++ b/about.html
@@ -14,10 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </head>
 <body class="night">
-  <!--Cursor dot container-->
-  <div class="cursor-dot" data-cursor-dot-about></div>
-  <div class="cursor-outline" data-cursor-outline-about></div>
-  <!--Cursor dot container-->
   <!--Loader animation-->
   <div id="pulse-wrapper">
     <div id="pulse">
@@ -57,7 +53,8 @@
     </div>
     <div id="about" class="about-2">
         <div class="space">
-          <p>We're on a mission to transform learning from a chore into an exhilarating adventure. At Mini Minds, we believe every child is a budding genius, bursting with curiosity and a thirst for knowledge. That's why we've created a vibrant digital playground where learning is disguised as fun. Imagine a world where numbers dance, words sing, and creativity soars! Our interactive games, captivating activities, and imaginative stories are crafted to ignite young minds and foster a lifelong love of learning. We're talking puzzles that perplex and delight, challenges that spark ingenuity, and tales that transport little explorers to far-off lands. Make education exciting, engaging, and effective for kids aged 5 to 12. Let's turn ordinary study time into extraordinary adventures together!</p><br>
+          <p>We're on a mission to transform learning from a chore into an exhilarating adventure. At Mini Minds, we believe every child is a budding genius, bursting with curiosity and a thirst for knowledge. That's why we've created a vibrant digital playground where learning is disguised as fun. Imagine a world where numbers dance, words sing, and creativity soars! Our interactive games, captivating activities, and imaginative stories are crafted to ignite young minds and foster a lifelong love of learning. We're talking puzzles that perplex and delight, challenges that spark ingenuity, and tales that transport little explorers to far-off lands. Make education exciting, engaging, and effective for kids aged 5 to 12. Let's turn ordinary study time into extraordinary adventures together!</p>
+          <div class="back-to-top"><a href="#"><i class="fa-solid fa-circle-arrow-up"></i></a></div><br>
           <strong class="fade-in-left-target">Why Trust Mini Minds?</strong>
           <ul>
             <li class="fade-in-left-target">
