--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <!--End of loader-->
-  <header class="navbar">
+  <header style="position: sticky;">
     <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
     <nav>
         <div id="menu-icon" class="menu-icon">&#9776;</div>
