--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
               </li>
             </ul><br>
-            <button class="sign-in" onclick="signIn()">Sign in</button>
-            <p>no account? <a href="#" onclick="signUp()">Sign up</a></p>
+            <button id="submit" class="sign-in" onclick="signUp()">Sign Up</button>
+            <p>no account? <a href="#" onclick="signIn()">Sign In</a></p>
             <a href="#" id="scroll" style="display: none;"><span></span></a>
         </div>
         <!--Cloud resource-->
@@ -179,4 +179,6 @@
 <div class="stars"></div>
 <!--classes for special effect at night -->
 <script src="script.js"></script>
+<script src="sign-in-up.js" type="module" defer></script>
+
 </body>
