--- a/about.html
+++ b/about.html
@@ -110,5 +110,7 @@
       </div>
   </footer>
   <!--Contact Us section Ends-->
+<!--link to java script-->
 <script src="script.js"></script>
+<!--link to java script-->
 </body>
