--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <div class="sky"></div>
 <div class="stars"></div>
 <!--classes for special effect at night -->
+<!--linking javascript-->
 <script src="script.js"></script>
-<script src="sign-in-up.js" type="module" defer></script>
-
+<!--linking javascript-->
 </body>
