--- a/stories.html
+++ b/stories.html
@@ -21,7 +21,7 @@
         <span></span>
     </div>
   </div>
-  <!--End of loader-->
+  <!--End of loader animation-->
     <!--Navigation Bar Code Starts-->
     <header>
       <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
@@ -115,4 +115,7 @@
   </div>
 </footer>
 <!--Contact Us section Ends-->
-    <script src="script.js"></script>
+<!--link to java script-->
+<script src="script.js"></script>
+<!--link to java script-->
+</body>
