--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Home | Mini Minds</title>
     <link rel="icon" type="image" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
+    <!--Fonts links-->
     <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!--Fonts links-->
+    <!--Animation js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
+    <!--Animation js-->
 </head>
 <body class="night">
   <!--Cursor dot container-->
