--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Mini Minds</title>
+  <title>About | Mini Minds</title>
   <link rel="icon" type="image" href="images/logo.png">
   <link rel="stylesheet" href="styles.css">
   <!--Fonts links-->
@@ -83,6 +83,7 @@
       <div class="footer-container">
           <div class="footer-brand contact">
               <a>Mini <span>Minds</span></a>
+              <p>Reach us out from contact section for any doubts</p>
           </div>
           <div class="footer-section" id="contact">
               <h2 class="heading">Contacts</h2>
