--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Mini Minds</title>
+  <title>Contact | Mini Minds</title>
   <link rel="icon" type="image" href="images/logo.png">
   <link rel="stylesheet" href="styles.css">
   <!--Fonts links-->
@@ -57,6 +57,11 @@
       <div class="footer-brand contact">
           <a>@Mini <span>Minds</span></a><br>
           <img src="images/miniminds.png" alt="" height="180px">
+          <div class="message">
+            <h2>Message us</h2>
+            <textarea type="text" id="message" name="message-us" required></textarea>
+            <button class="send-message">Send Message</button>
+          </div>
       </div>
       <div class="footer-section" id="contact">
           <h2 class="heading">Contacts</h2>
