--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             </ul><br>
             <button id="submit" class="sign-in" onclick="signUp()">Sign Up</button>
             <p>no account? <a href="#" onclick="signIn()">Sign In</a></p>
-            <a href="#" id="scroll" style="display: none;"><span></span></a>
         </div>
         <!--Cloud resource-->
         <div class="floating-clouds">
@@ -146,7 +145,8 @@
  <footer>
   <div class="footer-container">
       <div class="footer-brand contact">
-          <a>Mini <span>Minds</span></a>
+          <a>@Mini <span>Minds</span></a>
+          <p>Reach us out from contact section for any doubts</p>
       </div>
       <div class="footer-section" id="contact">
           <h2 class="heading">Contacts</h2>
