new-character-added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <!--End of loader-->
-  <header style="position: sticky;">
+  <header class="sticky-nav">
     <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
     <nav>
         <div id="menu-icon" class="menu-icon">&#9776;</div>
@@ -91,8 +91,12 @@
       </div>
     <!--Home Page Ends-->
     <!--Tree resource-->
+    <div class="container">
     <img class="tree-1" src="images/tree.png" alt="Tree" width="200px">
-    <img class="stone" src="images/rock.png" alt="Stone" width="70px">
+    <img class="stone-1" src="images/rock.png" alt="Stone" width="70px">
+    <img class="stone-2" src="images/rock.png" alt="Stone" width="70px">
+    <img class="walk" src="images/walking.gif" alt="cartoon" height="160px">
+  </div>
     <!--Tree resource end-->
     <!--About section Starts-->
     <div id="about" class="about">
